--- a/code/2017-07-20-动物育种值预测中的线性模型学习笔记1.Rmd
+++ b/code/2017-07-20-动物育种值预测中的线性模型学习笔记1.Rmd
@@ -47,7 +47,7 @@ $$
 在育种程序中，准确地预测育种值是非常重要的。因为在遗传改良过程中，必须要准确地选择那些真正属于高育种值的个体。根据可以用来进行选择的候选个体的类型和可以利用的信息，来决定使用何种预测育种值的方法。下一步讨论，如何利用不同的信息来源预测育种值。在许多遗传评估应用案例中，出现的PTA（predicted tranmitting ability）或者说ETA（estimated transmitting ability），通常指的是预测育种值的一半。
 
 # 1.3 利用动物自身性能预测育种值
-# 1.3.1 单次记录
+## 1.3.1 单次记录
 对于个体，当仅可获得一个表型值记录时，个体i的估计育种值计算公式为:
 
 公式1.4
@@ -103,3 +103,22 @@ $$
 育种值估计的准确度(根据公式1.6计算)
 
 $$r_{a,y} = $$ `r round(sqrt(0.45),2)`。
+
+## 1.3.2 重复记录
+
+个体的多次测定记录，如奶牛在哺乳期的多次产奶量，其均值可以用来预测个体的育种值。对于个体的多次测定记录，通常会存在如下假定：由于受到环境因子或者永久影响个体多次测定记录的环境的影响，多次测定记录间会存在更多的相似性（additional resemblance）。换句话说（in other words），受非遗传永久环境效应的影响，个体的多次测定记录间存在额外的协方差。
+
+个体间的方差可以进一步剖分为部分遗传的和部分环境的方差（永久环境效应，permanent environmental effect）；个体内的方差组分，是由对个体进行多次测量时的临时环境差异引起的。因此，观测值的方差可以进一步剖分为：
+
+$$var(y) = var(g) + var(pe) + var(te)$$
+
+其中$$var(g)$$是加性和非加性遗传方差；$$var(pe)$$是由永久环境效应产生的方差；$$var(te)$$是由随机的(random) 临时的 (temporary) 环境效应引起的方差。
+
+组内相关（**组内个体间的相关**），值得是个体间相关方差与表型方差的比例(the ratio of between-individual variance to phenotypic variance)
+
+$$t=(var(g)+var(pe))/var(y)$$
+
+t通常称之为重复力，用来测量个体记录间的相关。
+
+
+
